JacksonInject Diagram to DEs, fix TemporaryFile bug, improve diagramToM